--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -114,7 +114,7 @@ scrollbar-width: none;  /* Firefox */
 
 /* Password Section */
 
-.title {
+.title, .generate-title {
     height: 7%;
     width: 100%;
     text-align: center;
@@ -204,13 +204,28 @@ scrollbar-width: none;  /* Firefox */
 .right-generate-section {
     margin-right: 0;
     margin-left: 0;
+    margin-top: 0;
+    padding-top: 0;
+}
+
+
+.generate-title {
+    display: flex;
+    height: auto;
+    justify-content: center;
+    padding-bottom: 0;
+    margin-bottom: 0;
+}
+
+#generate-title-text {
+    text-decoration: underline;
 }
 
 .switch-part-header {
-    margin-top: 10px;
-    height: 30px;
+    height: 40px;
     display: flex;
     justify-content: space-evenly;
+    padding-bottom: 0;
 }
 
 .simple-gen-button {
@@ -240,29 +255,38 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .main-simple-content, .main-advanced-content {
-    margin-top: 10px;
-    margin-bottom: 5%;
     display: flex;
     justify-content: center;
     gap:30px;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin: 0 30px 5%;
 }
 
+.main-advanced-content{
+    margin-bottom: 0;
+}
+
+.below-advanced-content {
+    align-self: center;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    margin-top: 0;
+}
 .checkbox-part {
     display: flex;
+
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
     margin-top: 8%;
     color: white;
     text-transform: capitalize;
 }
 
+
 .checkbox-container {
     position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
     padding-left: 35px;
     margin-bottom: 20px;
@@ -271,12 +295,13 @@ scrollbar-width: none;  /* Firefox */
     user-select: none;
     height: 25px;
     font-weight: 800;
+    width: 100%
 }
 
 .checkbox-line {
+    align-self: center;
     display: flex;
     justify-content: center;
-    align-items: baseline;
     width: 100%;
 }
 
@@ -352,10 +377,9 @@ scrollbar-width: none;  /* Firefox */
     border-radius: 20px;
     background-color: #0B99FF;
     box-shadow: 0px 0px 2px 3px rgb(0, 0, 0, 0.2);
-
 }
 
-#generate-btn:hover, #save-gen-btn:hover {
+#generate-btn:hover, #save-gen-btn:not([disabled]):hover {
     cursor: pointer;
     background-color: #0666A9FF;
     border: 2px solid #D9D9D9;
@@ -437,8 +461,13 @@ scrollbar-width: none;  /* Firefox */
     align-self: center;
     justify-self: center;
     margin-right: 5px;
-
 }
+
+#copy-gen-passwd:not([disabled]):hover {
+    cursor: pointer;
+}
+
+
 
 /* ----------  */
 /* ACCOUNT SECTION */
@@ -668,6 +697,7 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .circle-input-1, .circle-input-2, .circle-input-3 {
+    margin-bottom: 0;
     width: 150px;
     height: 150px;
 }
@@ -722,8 +752,8 @@ scrollbar-width: none;  /* Firefox */
 }
 
 .inner-1, .inner-2, .inner-3 {
-    width: 105px;
-    height: 105px;
+    width: 107px;
+    height: 107px;
 }
 
 #circle-text, #circle-text-1, #circle-text-2, #circle-text-3 {
@@ -752,9 +782,8 @@ circle {
 
 #rotating-circle-1, #rotating-circle-2, #rotating-circle-3 {
     fill: none;
-    stroke-width: 15px;
-    stroke-dasharray: 400;
-    stroke-dashoffset: 500px;
+    stroke-width: 13px;
+    stroke-dasharray: 375;
     stroke: red;
 }
 
