Added scrapping for icons
# Dev-end
- Added passwords icons to .gitignore

# Front-end
- added sticky layout to passwords section
- added autofocus on password on loggin page
- added autofucus on search on main app page

# Back-end
- added icon scrapping from password name using DuckDuckGo search api (Big thank to @deedy5 for his work on [DDGS](https://github.com/deedy5/duckduckgo_search))
- Added filtering with custom color to make icons fit the app theme (can also easly be changed)
- adapted teh controller to use the IconGrabber class (some cleaning still have to be done tough)

--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -133,10 +133,15 @@ scrollbar-width: none;  /* Firefox */
 .buttons-section {
     height: 10%;
     width: 100%;
+    position: sticky;
+    top: 0;
+    padding-top: 20px;
+    background-color: #282626;
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding-bottom: 20px;
+    box-shadow: 0px 15px 14px -1px #282626e9; 
 }
 
 .search-field, .add-account {
@@ -478,7 +483,7 @@ scrollbar-width: none;  /* Firefox */
 
 
 .accounts-section {
-    padding: 10px;
+    padding: 20px;
     display: grid;
     justify-items: center;
 }
