--- a/src/main/views/app.jinja2
+++ b/src/main/views/app.jinja2
@@ -41,7 +41,7 @@
             </div>
             <div class="buttons-section">
                 <div class="search-field">
-                    <input type="text" placeholder="Rechercher un site" class="input-search">
+                    <input type="text" placeholder="Rechercher un site" class="input-search" autofocus>
                     <div class="logo-loupe"> <i class="fas fa-search" onclick="filter()"></i> </div>
                 </div>
                 <div class="add-account" onclick="showPasswordPopup()">
