--- a/src/main/views/login.jinja2
+++ b/src/main/views/login.jinja2
@@ -15,7 +15,7 @@
             <label for="password_input">
                 <b>Password</b>
             </label>
-            <input placeholder="Password..." type="password" id="password_input">
+            <input placeholder="Password..." type="password" id="password_input" autofocus>
             <button class="forget-button" onclick="callRecovery()"><b>Forgot password ?</b></button>
             <button onclick="submitLogin()" id="login-button">Login</button>
             <button onclick="bridge.callStartup()">Create Account</button>
