--- a/src/main/views/app.jinja2
+++ b/src/main/views/app.jinja2
@@ -74,7 +74,7 @@
                 {% for passwd in passwords %}
                 <div class="account">
                     <div class="logo-left"> <i class="fab fa-twitter"></i> </div>
-                    <img src="{{ passwd.icon }}.png" alt="icon" class="{{passwd.target }}_icon">
+                    <img src="{{ passwd.icon }}.png" alt="icon" class="passswd_icon">
                     <div class="center-elements">
                         <div class="top-center">
                             <p>Site Web</p>
