--- a/src/main/static/app.css
+++ b/src/main/static/app.css
@@ -214,49 +214,13 @@ scrollbar-width: none;  /* Firefox */
 }
 
 
-.generate-title {
-    display: flex;
-    height: auto;
-    justify-content: center;
-    padding-bottom: 0;
-    margin-bottom: 0;
-}
-
-#generate-title-text {
-    text-decoration: underline;
-}
-
 .switch-part-header {
+    margin-top: 20px;
+    margin-bottom: 20px;
     height: 40px;
     display: flex;
     justify-content: space-evenly;
-    padding-bottom: 0;
-}
 
-.simple-gen-button {
-    background-color: #282626;
-    width: 50%;
-    border: none;
-    font-weight: 800;
-
-    color: #0B99FF;
-
-}
-
-.advanced-gen-button {
-    background-color: #282626;
-    width: 50%;
-    border: none;
-    font-weight: 800;
-
-    border-bottom: 2px solid black;
-    border-left: 2px solid black;
-    box-shadow: inset 0px -10px 10px -10px rgba(0, 0, 0, 1);
-}
-
-
-.simple-gen-button:hover, .advanced-gen-button:hover {
-    cursor: pointer;
 }
 
 .main-simple-content, .main-advanced-content {
@@ -820,3 +784,88 @@ svg {
 }
 
 /* ----------- */
+
+/* Switch Header */
+
+ .radio {
+	 background: #1e1e1e;
+	 border-radius: 50px;
+	 padding: 10px 15px;
+	 color: #626262;
+	 font-weight: bold;
+	 display: flex;
+	 justify-content: space-between;
+	 align-items: center;
+	 height: 25px;
+	 width: 300px;
+	 font-size: 21px;
+	 position: relative;
+	 transition: all 0.5s ease-in-out;
+	 margin-bottom: 20px;
+     box-shadow: 0px 0px 4px 2px rgba(0, 0, 0, 0.5);
+}
+
+ .radio.off {
+	 background:  #D9D9D9;
+}
+ .radio.off .bar {
+	 background: #ccc;
+	 left: 136px;
+}
+ .radio.off label[for='on'] {
+	 color: #626262;
+}
+ .radio.off label[for='off'] {
+	 color: #000;
+}
+ .radio .wrap {
+	 width: 100%;
+	 display: flex;
+	 justify-content: space-between;
+	 align-items: center;
+	 border-radius: 50px;
+	 overflow: hidden;
+	 position: relative;
+	 height: 40px;
+}
+ .radio input {
+	 opacity: 0;
+	 pointer-events: none;
+}
+ .radio label {
+	 position: relative;
+	 z-index: 1;
+	 cursor: pointer;
+	 transition: all 0.5s ease-in-out;
+	 user-select: none;
+}
+ .radio label[for='on'] {
+	 margin-left: 10px;
+	 color: #000;
+}
+ .radio label[for='off'] {
+	 margin-right: 10px;
+}
+ .radio #on {
+	 position: absolute;
+	 left: 0;
+	 top: 50%;
+	 transform: translateY(-50%);
+}
+ .radio #off {
+	 position: absolute;
+	 right: 0;
+	 top: 50%;
+	 transform: translateY(-50%);
+}
+ .radio .bar {
+	 position: absolute;
+	 left: -90px;
+	 top: 50%;
+	 transform: translateY(-50%);
+	 background:  #D9D9D9;
+	 height: 40px;
+	 width: 200px;
+	 border-radius: 50px;
+	 transition: all 0.5s ease-in-out;
+}
